<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Reauty</string>
    <string name="text_login">Log In</string>
    <string name="text_join_now">Join Now</string>
    <string name="text_error_internet_connection">No Internet Connection!</string>
    <string name="text_placeholder_tag">#tags</string>
    <string name="text_placeholder_name">John Doe</string>
    <string name="text_placeholder_count">0</string>
    <string name="text_reviews">Reviews</string>
    <string name="text_posts">Posts</string>
    <string name="webclient_id" tools:ignore="TypographyDashes">232489786179-01i6vn9gq5iij751sd2464l6if9pheoa.apps.googleusercontent.com</string>
    <string name="text_welcome">Welcome to Reauty</string>
    <string name="text_onboarding_title_1">Real Ratings, Real Users</string>
    <string name="text_onboarding_title_2">AI Skin Consultant</string>
    <string name="text_onboarding_title_3">Information Aggregator</string>
    <string name="text_onboarding_desc_1">User-generated rating system with barcode scan technology for each access to product information.</string>
    <string name="text_onboarding_desc_2">Unique face ID technology analyzes skin problems and provides beauty tips.</string>
    <string name="text_onboarding_desc_3">Database powered search using deep machine learning programs providing relevant results.</string>
    <string name="text_auth_title_login">Log in/Sign Up</string>
    <string name="text_with_email">With Email</string>
    <string name="text_with_or">or With</string>
    <string name="text_email">Email</string>
    <string name="text_auth_login">Login</string>
    <string name="text_login_apple">Sign in with Apple</string>
    <string name="text_login_google">Sign in with Google</string>
    <string name="text_create_profile">Create Profile</string>
    <string name="text_desc_create_profile">Add your details to sign up for Reauty</string>
    <string name="text_name">Name</string>
    <string name="text_error_name">Name shouldn\'t be empty</string>
    <string name="text_error_unique_name">*This username is taken</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_error_birthday">You are under age min age is (16)</string>
    <string name="text_gender">Gender</string>
    <string name="text_hint_password">*Password must contain at least one number</string>
    <string name="text_title_eula">Review our Terms and Services</string>
    <string name="text_finish_profile">Finish Profile</string>
    <string name="text_create_profile_login">Login</string>
    <string name="text_to_login">Already have an account?</string>
    <string name="text_unique_name">Your Unique Username</string>
    <string name="text_desc_unique_name">This is how users will find you!</string>
    <string name="text_let_is_go">Let\'s Go!</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_undefined">Undefined</string>
    <string name="text_select">Select</string>
    <string name="eula_header_1">Privacy Policy</string>
    <string name="eula_header_2">Interpretation and Definitions</string>
    <string name="eula_header_3">Interpretation</string>
    <string name="eula_header_4">Definitions</string>
    <string name="eula_header_5">Collecting and Using Your Personal Data</string>
    <string name="eula_header_6">Types of Data Collected</string>
    <string name="eula_header_7">Personal Data</string>
    <string name="eula_header_8">Usage Data</string>
    <string name="eula_header_9">Information from Third-Party Social Media Services</string>
    <string name="eula_header_10">Tracking Technologies and Cookies</string>
    <string name="eula_header_11">Use of Your Personal Data</string>
    <string name="eula_header_12">Retention of Your Personal Data</string>
    <string name="eula_header_13">Transfer of Your Personal Data</string>
    <string name="eula_header_14">Disclosure of Your Personal Data</string>
    <string name="eula_header_15">Law enforcement</string>
    <string name="eula_header_16">Other legal requirements</string>
    <string name="eula_header_17">Security of Your Personal Data</string>
    <string name="eula_header_18">Children\'s Privacy</string>
    <string name="eula_header_19">Links to Other Websites</string>
    <string name="eula_header_20">Changes to this Privacy Policy</string>
    <string name="eula_header_21">Contact Us</string>
    <string name="eula_body_1">Last updated: June 15, 2021

This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.

We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the Privacy Policy Generator.</string>
    <string name="eula_body_2">The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</string>
    <string name="eula_body_3">For the purposes of this Privacy Policy:

    Account means a unique account created for You to access our Service or parts of our Service.

    Company (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to The Blingy Technology &amp; Entertainment, Inc., 2261 Market Street, #4362, San Francisco, CA, 94114.

    Cookies are small files that are placed on Your computer, mobile device or any other device by a website, containing the details of Your browsing history on that website among its many uses.

    Country refers to: California, United States

    Device means any device that can access the Service such as a computer, a cellphone or a digital tablet.

    Personal Data is any information that relates to an identified or identifiable individual.

    Service refers to the Website and the Applications.

    Service Provider means any natural or legal person who processes the data on behalf of the Company. It refers to third-party companies or individuals employed by the Company to facilitate the Service, to provide the Service on behalf of the Company, to perform services related to the Service or to assist the Company in analyzing how the Service is used.

    Third-party Social Media Service refers to any website or any social network website through which a User can log in or create an account to use the Service.

    Usage Data refers to data collected automatically, either generated by the use of the Service or from the Service infrastructure itself (for example, the duration of a page visit).

    Website refers to Blingy T&amp;E, accessible from http://www.blingyte.com

    You means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.
</string>
    <string name="eula_body_4">While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:

    Email address

    First name and last name

    Phone number

    Address, State, Province, ZIP/Postal code, City

    Usage Data
</string>
    <string name="eula_body_5">Usage Data is collected automatically when using the Service.
Usage Data may include information such as Your Device\'s Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that You visit, the time and date of Your visit, the time spent on those pages, unique device identifiers and other diagnostic data.
When You access the Service by or through a mobile device, We may collect certain information automatically, including, but not limited to, the type of mobile device You use, Your mobile device unique ID, the IP address of Your mobile device, Your mobile operating system, the type of mobile Internet browser You use, unique device identifiers and other diagnostic data.
We may also collect information that Your browser sends whenever You visit our Service or when You access the Service by or through a mobile device.</string>
    <string name="eula_body_6">testing body 6</string>
    <string name="eula_body_7">We use Cookies and similar tracking technologies to track the activity on Our Service and store certain information. Tracking technologies used are beacons, tags, and scripts to collect and track information and to improve and analyze Our Service. The technologies We use may include:
    Cookies or Browser Cookies. A cookie is a small file placed on Your Device. You can instruct Your browser to refuse all Cookies or to indicate when a Cookie is being sent. However, if You do not accept Cookies, You may not be able to use some parts of our Service. Unless you have adjusted Your browser setting so that it will refuse Cookies, our Service may use Cookies.
    Flash Cookies. Certain features of our Service may use local stored objects (or Flash Cookies) to collect and store information about Your preferences or Your activity on our Service. Flash Cookies are not managed by the same browser settings as those used for Browser Cookies. For more information on how You can delete Flash Cookies, please read "Where can I change the settings for disabling, or deleting local shared objects?" available at https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_
    Web Beacons. Certain sections of our Service and our emails may contain small electronic files known as web beacons (also referred to as clear gifs, pixel tags, and single-pixel gifs) that permit the Company, for example, to count users who have visited those pages or opened an email and for other related website statistics (for example, recording the popularity of a certain section and verifying system and server integrity).
Cookies can be "Persistent" or "Session" Cookies. Persistent Cookies remain on Your personal computer or mobile device when You go offline, while Session Cookies are deleted as soon as You close Your web browser. Learn more about cookies: What Are Cookies?.
We use both Session and Persistent Cookies for the purposes set out below:
    Necessary / Essential Cookies
    Type: Session Cookies
    Administered by: Us
    Purpose: These Cookies are essential to provide You with services available through the Website and to enable You to use some of its features. They help to authenticate users and prevent fraudulent use of user accounts. Without these Cookies, the services that You have asked for cannot be provided, and We only use these Cookies to provide You with those services.
    Cookies Policy / Notice Acceptance Cookies
    Type: Persistent Cookies
    Administered by: Us
    Purpose: These Cookies identify if users have accepted the use of cookies on the Website.
    Functionality Cookies
    Type: Persistent Cookies
    Administered by: Us
    Purpose: These Cookies allow us to remember choices You make when You use the Website, such as remembering your login details or language preference. The purpose of these Cookies is to provide You with a more personal experience and to avoid You having to re-enter your preferences every time You use the Website.
For more information about the cookies we use and your choices regarding cookies, please visit our Cookies Policy or the Cookies section of our Privacy Policy.</string>
    <string name="menu_home">Home</string>
    <string name="menu_ratings">Ratings</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>
</resources>