<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:contentDescription="@string/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/searchHostFragment"
        android:contentDescription="@string/menu_ratings"
        android:icon="@drawable/ic_ratings"
        android:title="@string/menu_ratings" />

    <item
        android:id="@+id/action_placeholder"
        android:title=""/>

    <item
        android:id="@+id/chatFragment"
        android:contentDescription="@string/menu_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/menu_messages" />
    <item
        android:id="@+id/profileFragment"
        android:contentDescription="@string/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile" />
</menu>