<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.presentation.view.CreateProfileFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        style="@style/Text.CreateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_create_profile"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_desc"
        style="@style/Text.CreateProfile.Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_desc_create_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_username"
        style="@style/EditText.Rounded"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center"
        android:hint="@string/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_birthday"
        style="@style/Button.Outlined.Round.Text"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_error_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/btn_birthday"
        app:layout_constraintStart_toStartOf="@id/btn_birthday"
        app:layout_constraintTop_toBottomOf="@id/btn_birthday" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gender"
        style="@style/Button.Outlined.Round.Text"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_birthday" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_password_hint"
        style="@style/Text.CreateProfile.Hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_hint_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gender"
        tools:text="@string/app_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_eula"
        style="@style/Text.CreateProfile.Eula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_title_eula"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_hint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish_profile"
        style="@style/Button.Contained.Rounded"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_finish_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_eula" />

    <LinearLayout
        android:id="@+id/container_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            tools:text="@string/text_to_login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/text_create_profile_login"
            android:textAlignment="viewStart"
            tools:text="@string/text_create_profile_login" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14911081" />

</androidx.constraintlayout.widget.ConstraintLayout>