<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.presentation.view.SignInFragment">

    <!--down arrow-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_down" />

    <!--title text-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        style="@style/Text.SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_auth_title_login"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <!--desc text-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_with_email"
        style="@style/Text.SignIn.Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_with_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <!--email edit text-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email"
        style="@style/EditText.Rounded"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center"
        android:hint="@string/text_email"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_email" />

    <!--join now button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Button.Contained.Rounded"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_auth_login"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--desc text-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_or_with"
        style="@style/Text.SignIn.Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_with_or"
        app:layout_constraintBottom_toTopOf="@+id/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:text="@string/app_name" />

    <!--google login button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        style="@style/Button.Outlined.Rounded.Social"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/text_login_google"
        app:icon="@drawable/ic_logo_google"
        app:iconGravity="textStart"
        app:iconPadding="20dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <!--progress bar-->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_or_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>