<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Image.Outlined.Rounded.AccountAndTagAvatar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_tag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_placeholder_tag"
        app:layout_constraintStart_toEndOf="@+id/imv_avatar"
        app:layout_constraintTop_toTopOf="@+id/imv_avatar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_count_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_placeholder_count"
        app:layout_constraintStart_toStartOf="@+id/tv_tag_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_tag_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_text_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_posts"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count_post"
        app:layout_constraintStart_toEndOf="@+id/tv_count_post"
        app:layout_constraintTop_toTopOf="@+id/tv_count_post" />

</androidx.constraintlayout.widget.ConstraintLayout>